fix(cxl-ui): cxl-marketing-nav menu bar button alignment on desktop
https://app.clickup.com/t/86b2hv84w

--- a/packages/cxl-ui/scss/cxl-marketing-nav.scss
+++ b/packages/cxl-ui/scss/cxl-marketing-nav.scss
@@ -3,6 +3,10 @@
 :host {
   --lumo-clickable-cursor: pointer;
 
+  display: block;
+  background-color: var(--lumo-base-color);
+  border-bottom: 1px solid var(--lumo-shade-5pct);
+
   ::part(menu-bar-button),
   vaadin-menu-bar-button[theme~="cxl-marketing-nav"] {
     min-width: auto;
@@ -11,7 +15,13 @@
   }
 
   ::part(overflow-button) {
+    padding-right: 0;
+    margin-right: 0;
     margin-left: auto;
+
+    &::before {
+      background-color: unset;
+    }
   }
 
   nav {
@@ -22,7 +32,7 @@
     width: 100%;
     max-width: 100vw;
     min-height: var(--cxl-marketing-nav-min-height, 44px);
-    padding: 0 var(--lumo-space-m);
+    padding: 0 var(--cxl-wrap-padding, none);
     overflow: hidden;
 
     &:not([wide]) {
@@ -33,19 +43,9 @@
       .container {
         justify-content: space-between;
 
-        .cxl-logo{
-          margin-left: 0;
-          padding-left: 0;
-        }
-
         .search-button {
           width: 140px;
           color: var(--lumo-shade);
-        }
-
-        vaadin-menu-bar::part(overflow-button) {
-          margin-right: 0;
-          padding-right: 0;
         }
       }
     }
@@ -59,6 +59,8 @@
       /* stylelint-disable-next-line selector-no-qualifying-type */
       vaadin-menu-bar-button.cxl-logo {
         min-width: auto;
+        padding-left: 0;
+        margin-left: 0;
       }
     }
 
@@ -80,12 +82,6 @@
     .menu-item {
       min-width: min-content;
       white-space: nowrap;
-    }
-
-    /* stylelint-disable-next-line selector-no-qualifying-type */
-    &#menu-global-items, &#menu-primary-items {
-      background-color: var(--lumo-base-color);
-      border-bottom: 1px solid var(--lumo-shade-5pct);
     }
 
     .vaadin-context-menu-item--dropdown-icon {
